<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/aboutUsScreenFragment"
        android:contentDescription="@string/content_description_about_us_screen_fragment_tool_bar_main_content_menu"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/title_about_us_screen_fragment_tool_bar_main_content_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:contentDescription="@string/content_description_logout_tool_bar_main_content_menu"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="@string/title_logout_tool_bar_main_content_menu"
        app:showAsAction="ifRoom" />

</menu>