<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/editTitleBottomModalSheetFragment"
        android:contentDescription="@string/content_description_edit_title_tool_bar_edit_poem_screen_fragment"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/title_edit_title_tool_bar_edit_poem_screen_fragment" />

    <item
        android:id="@+id/editGenreBottomModalSheetFragment"
        android:contentDescription="@string/content_description_edit_genre_tool_bar_edit_poem_screen_fragment"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/title_edit_genre_tool_bar_edit_poem_screen_fragment" />

    <item
        android:id="@+id/done_menu_button"
        android:contentDescription="Done"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="Done"
        app:showAsAction="always" />

</menu>