<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authentication_navigation_graph"
    app:startDestination="@id/emailInputScreenFragment">

    <fragment
        android:id="@+id/emailInputScreenFragment"
        android:name="io.github.chhabra_dhiraj.poempre.ui.main.authentication.EmailInputScreenFragment"
        android:label="@string/label_email_input_screen_fragment_authentication_navigation_graph"
        tools:layout="@layout/fragment_email_input_screen">
        <action
            android:id="@+id/action_emailInputScreenFragment_to_passwordInputScreen"
            app:destination="@id/passwordInputScreenFragment" />
        <action
            android:id="@+id/action_emailInputScreenFragment_to_userDetailsInputScreen"
            app:destination="@id/userDetailsInputScreenFragment" />
    </fragment>
    <fragment
        android:id="@+id/passwordInputScreenFragment"
        android:name="io.github.chhabra_dhiraj.poempre.ui.main.authentication.PasswordInputScreenFragment"
        android:label="@string/label_password_input_screen_fragment_authentication_navigation_graph"
        tools:layout="@layout/fragment_password_input_screen" >
        <action
            android:id="@+id/action_passwordInputScreen_to_otpInputScreenFragment"
            app:destination="@id/otpInputScreenFragment" />
        <action
            android:id="@+id/action_passwordInputScreen_to_main_content_navigation_graph"
            app:destination="@id/main_content_navigation_graph"
            app:popUpTo="@id/emailInputScreenFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/userDetailsInputScreenFragment"
        android:name="io.github.chhabra_dhiraj.poempre.ui.main.authentication.UserDetailsInputScreen"
        android:label="@string/label_user_details_input_screen_fragment_authentication_navigation_graph"
        tools:layout="@layout/fragment_user_details_input_screen" >
        <action
            android:id="@+id/action_userDetailsInputScreenFragment_to_main_content_navigation_graph"
            app:destination="@id/main_content_navigation_graph"
            app:popUpTo="@id/emailInputScreenFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/otpInputScreenFragment"
        android:name="io.github.chhabra_dhiraj.poempre.ui.main.authentication.OtpInputScreenFragment"
        android:label="@string/label_otp_input_screen_fragment_authentication_navigation_graph"
        tools:layout="@layout/fragment_otp_input_screen">
        <action
            android:id="@+id/action_otpInputScreenFragment_to_changePassScreenFragment"
            app:destination="@id/changePassScreenFragment" />
    </fragment>
    <fragment
        android:id="@+id/changePassScreenFragment"
        android:name="io.github.chhabra_dhiraj.poempre.ui.main.authentication.ChangePassScreenFragment"
        android:label="@string/label_change_pass_screen_fragment_authentication_navigation_graph"
        tools:layout="@layout/fragment_change_pass_screen">
        <action
            android:id="@+id/action_changePassScreenFragment_to_passwordInputScreen"
            app:destination="@id/passwordInputScreenFragment"
            app:popUpTo="@id/passwordInputScreenFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <include app:graph="@navigation/main_content_navigation_graph" />
</navigation>