<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="io.github.chhabra_dhiraj.poempre.viewmodels.AuthenticationViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.authentication.PasswordInputScreenFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_password_input_screen_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_et_password_input_password_input_screen_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password_password_input_screen_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit_password_password_input_screen_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_btn_submit_password_input_screen_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/til_password_password_input_screen_fragment"
            app:layout_constraintStart_toStartOf="@+id/til_password_password_input_screen_fragment"
            app:layout_constraintTop_toBottomOf="@+id/til_password_password_input_screen_fragment"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forgot_password_password_input_screen_fragment"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/text_btn_forgot_password_input_screen_fragment"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/til_password_password_input_screen_fragment"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/til_password_password_input_screen_fragment"
            app:layout_constraintTop_toBottomOf="@+id/til_password_password_input_screen_fragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>